--- a/SmartEjectors.csproj
+++ b/SmartEjectors.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>SmartEjectors</AssemblyName>
     <Description>Smart EM Rail Ejectors</Description>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BepInEx.Core" Version="5.*" />
+    <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
     <PackageReference Include="DysonSphereProgram.GameLibs" Version="*-*" />
     <PackageReference Include="UnityEngine.Modules" Version="2018.4.12" IncludeAssets="compile" />
   </ItemGroup>
