--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,9 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: bin/Release/netstandard2.0/SmartEjectors.dll
+      - run: dotnet new tool-manifest
+      - run: dotnet tool install tcli
       - name: Publish
         env:
           TCLI_AUTH_TOKEN: ${{ secrets.TCLI_AUTH_TOKEN }}
-        run: ./tcli publish --package-version "${{ steps.version.outputs._1 }}"
+        run: dotnet tcli publish --package-version "${{ steps.version.outputs._1 }}"
