Add new dependency to thunderstore.toml

--- a/thunderstore.toml
+++ b/thunderstore.toml
@@ -10,6 +10,7 @@ containsNsfwContent = false
 
 [package.dependencies]
 xiaoye97-BepInEx = "5.4.17"
+nebula-NebulaMultiplayerModApi = "1.1.2"
 
 [build]
 icon = "./icon.png"
