--- a/SmartEjectors.csproj
+++ b/SmartEjectors.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <AssemblyName>SmartEjectors</AssemblyName>
     <Description>Smart EM Rail Ejectors</Description>
     <Version>1.3.1</Version>
